--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^7.5.0",
     "express-validator": "^7.0.1",
     "ioredis": "^5.5.0",
     "joi": "^17.13.3",
